# comfyui_workflow_exec

./: .env  .gitignore  main.py  main.py.example  pyproject.toml  readme.md  ruff.toml  testruff.py
comfyui_client/: __init__.py  comfyui_client.py  comfyui_simplclient.py  comfyui_webscoket.py  comfyui_websocket.py  message_config.py
config/: comfy_schema.py  config.json.example  config.yaml  my_config.json
tests/: test_workflow_manager.py
utils/: __init__.py  file_utils.py  logger.py  math_utils.py  xml_utils.py
workflow_manager/: __init__.py  constant.py  exceptions.py  workflow_manager.py  workflow_run.py
workflows/: workflow_template.json
