[project]
name = "comfyui-workflow-exec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.28.0",
    "websocket-client>=1.6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
